Transaction Entity implementaion dpendes on test

--- a/MoneyBocket.Test/MoneyBocket.Test.csproj
+++ b/MoneyBocket.Test/MoneyBocket.Test.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include=".Framework\OptionBuilder.cs" />
+    <Compile Include=".Framework\ConnectionProvider.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.14.0" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.14.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
